<resources>
    <string name="app_name">PhanLeHoangViet_19512321_change_maker</string>



    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">CLEAR</string>


    <string name="twentyDollar">20$:</string>
    <string name="tenDollar">10$:</string>
    <string name="fiveDollar">5$:</string>
    <string name="oneDollar">1$:</string>
    <string name="oneCent">1cent:</string>
    <string name="twentyFiveCent">25cent:</string>
    <string name="tenCent">10cent:</string>
    <string name="fiveCent">5cent:</string>


    <string name="backspace"> </string>
    <string name="price">Price:</string>
    <string name="total_changes">0.00</string>

    <string name="twentyDollar_changes">0</string>
    <string name="tenDollar_changes">0</string>
    <string name="fiveDollar_changes">0</string>
    <string name="oneDollar_changes">0</string>
    <string name="oneCent_changes">0</string>
    <string name="twentyFiveCent_changes">0</string>
    <string name="tenCent_changes">0</string>
    <string name="fiveCent_changes">0</string>


</resources>